# GenHack4

./: .gitignore  README.md  pyproject.toml
0_exploration/: gadm_exploration.ipynb  tx_data_exploration.ipynb
1_exploration/: era5_data_exploration.ipynb
3_metrics/: week3_team29.html  week3_team29.ipynb
4_model/: week4_team29.html  week4_team29.ipynb
