[project]
name = "genhack"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.6.2",
    "dask>=2025.11.0",
    "geopandas>=1.1.1",
    "hvplot>=0.12.1",
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "nbformat>=4.2.0",
    "netcdf4>=1.7.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "rioxarray>=0.20.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "xarray>=2025.10.1",
]

[tool.ruff]
line-length = 120
